--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     body { font-family: sans-serif; text-align: center; padding: 50px; background: #f0f0f0; }
     h1 { color: #333; }
     p { color: #666; }
+    nav a { color: #007acc; text-decoration: none; margin: 0 10px; }
   </style>
 </head>
 <body>
-  <h1>Welcome to Canvawwayp.org</h1>
+  <h1>Welcome to canvawwayp.org</h1>
   <p>We’re getting things ready — check back soon!</p>
+  <nav>
+    <p>
+      <a href="about/">About</a> |
+      <a href="contact/">Contact</a> |
+      <a href="projects/">Projects</a>
+    </p>
+  </nav>
 </body>
 </html>
