--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--
+  Author: Ben Roden
+  Last Edited: 2025-06-05
+  Author Notes: Hello!
+
+  Filename: index.html
+  File Path: /index.html
+  Description: Landing page for canvawwayp.org with navigation to subpages.
+
+  Context: This is a github-hosted webpage for a professional organziation consisting of planners and engineers.
+  Pages are organized via subfolders with "index.html" files in each folder. We are keepin things super simple.
+  
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
