--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calendar | Canvawwayp</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #007acc;
+      color: white;
+      padding: 1rem 0;
+    }
+    iframe {
+      border: 0;
+      width: 100%;
+      height: 80vh;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Organization Calendar</h1>
+  </header>
 
+  <main>
+    <!-- Replace the `src` below with your actual calendar embed link -->
+    <iframe 
+      src="https://calendar.google.com/calendar/embed?src=canvawwayp%40gmail.com&ctz=America%2FLos_Angeles" 
+      frameborder="0" 
+      scrolling="no">
+    </iframe>
+  </main>
+</body>
+</html>
