--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,3 +1,15 @@
+<!--
+  Author: Matthew Frazier
+  Last Edited: 2025-06-06
+  Author Notes: 
+
+  Filename: index.html
+  File Path: calendar/index.html
+  File URL: https://github.com/canvawwayp/canvawwayp.github.io/edit/main/calendar/index.html
+  Description:
+  
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
