--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!--
   Author: Ben Roden
-  Last Edited: 2025-06-05
+  Last Edited: 2025-06-06
   Author Notes: Hello!
 
   Filename: index.html
   File Path: /index.html
-  Description: Landing page for canvawwayp.org with navigation to subpages.
-
-  Context: This is a github-hosted webpage for a professional organziation consisting of planners and engineers.
-  Pages are organized via subfolders with "index.html" files in each folder. We are keepin things super simple.
+  File URL: https://github.com/canvawwayp/canvawwayp.github.io/blob/main/index.html
+  Description:
   
 -->
 
@@ -30,8 +28,7 @@
   <nav>
     <p>
       <a href="about/">About</a> |
-      <a href="contact/">Contact</a> |
-      <a href="projects/">Projects</a>
+      <a href="calendar/">Calendar</a>
     </p>
   </nav>
 </body>
