--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!--
   Author: Matthew Frazier
   Last Edited: 2025-06-06
-  Author Notes: 
+  Author Notes: ****
 
   Filename: index.html
   File Path: about/index.html
